--- a/RVC_100hz_mixed/platformio.ini
+++ b/RVC_100hz_mixed/platformio.ini
@@ -14,5 +14,8 @@ board = teensy41
 framework = arduino
 lib_deps = 
 	https://github.com/janelia-arduino/Streaming
+	ssilverman/QNEthernet@^0.29.1
+	khoih-prog/AsyncUDP_Teensy41@^1.2.1
+	locoduino/RingBuffer@^1.0.5
 upload_speed = 921600
 upload_protocol = teensy-gui
