--- a/RVC_100hz_mixed/platformio.ini
+++ b/RVC_100hz_mixed/platformio.ini
@@ -17,5 +17,6 @@ lib_deps =
 	ssilverman/QNEthernet@^0.29.1
 	khoih-prog/AsyncUDP_Teensy41@^1.2.1
 	khoih-prog/AsyncWebServer_Teensy41@^1.7.0
+	denyssene/SimpleKalmanFilter@^0.1.0
 upload_speed = 921600
 upload_protocol = teensy-gui
