--- a/RVC_100hz_mixed/platformio.ini
+++ b/RVC_100hz_mixed/platformio.ini
@@ -14,9 +14,9 @@ board = teensy41
 framework = arduino
 lib_deps = 
 	https://github.com/janelia-arduino/Streaming
-	ssilverman/QNEthernet@^0.29.1
-	khoih-prog/AsyncUDP_Teensy41@^1.2.1
-	khoih-prog/AsyncWebServer_Teensy41@^1.7.0
+	;ssilverman/QNEthernet@^0.29.1
+	;khoih-prog/AsyncUDP_Teensy41@^1.2.1
+	;khoih-prog/AsyncWebServer_Teensy41@^1.7.0
 upload_speed = 921600
 upload_protocol = teensy-gui
 ;
